--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import "./global/footer.css";
 /* Utilidades */
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 /* Home */
 @import "./home/introducao.css";
 @import "./home/tecnologia.css";
@@ -13,5 +14,16 @@
 @import "./home/depoimento.css";
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
+/* Bicicleta */
+@import "./bibicleta/bicicleta.css";
+@import "./bibicleta/bicicleta.css";
 /* Seguros */
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
+/* Contato */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+/* Termos */
+@import "./termos/termos.css";
