--- a/css/style.css
+++ b/css/style.css
@@ -25,5 +25,7 @@
 /* Contato */
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
+/* Orcamento */
+@import "./orcamento/orcamento.css";
 /* Termos */
 @import "./termos/termos.css";
