--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 @import "./bicicletas/bicicletas.css";
 /* Bicicleta */
 @import "./bibicleta/bicicleta.css";
-@import "./bibicleta/bicicleta.css";
+@import "./bibicleta/seguro.css";
 /* Seguros */
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
