--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -15,15 +15,19 @@
   background-color: var(--cor-1);
 }
 
-.perguntas dt {
+.perguntas button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
 
-.perguntas dt::before {
+.perguntas button::before {
   content: "";
   display: inline-block;
   width: 12px;
@@ -31,17 +35,27 @@
   background-color: var(--cor-p1);
 }
 
-.perguntas dt::after {
+.perguntas button::after {
   content: "";
   display: inline-block;
   width: 14px;
   height: 6px;
   background: url("../../img/icones/seta-abrir.svg");
+  transform: rotate(180deg);
   transition: transform 0.3s;
 }
 
-.perguntas dt:hover::after {
-  transform: rotate(180deg);
+.perguntas button:hover::after,
+.perguntas button[aria-expanded="true"]::after {
+  transform: rotate(0deg);
+}
+
+.js .perguntas dd {
+  display: none;
+}
+
+.js .perguntas dd.ativa {
+  display: block;
 }
 
 .perguntas dd {
